# oneupload

./: .gitignore  README.md  pyproject.toml
oneupload/: __init__.py  config.py  plugin.py  proxy.py  utils.py
oneupload/clients/: alioss.py  command.py  github.py
